fix: fixed spacing issues and updated some stats

--- a/style.css
+++ b/style.css
@@ -88,6 +88,8 @@ h2.section-title {
 .line {
 	display: block;
 	overflow: hidden;
+	padding-bottom: 0.15em;
+	margin-bottom: -0.15em;
 }
 .line > span {
 	display: block;
